--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <h1>GitHub Project</h1>
     <h2>GitHub Update 2nd Person</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus consequuntur quo nemo ratione, laborum doloribus.</p>
+    <br>
+    <button>Awesome Button</button>
 </body>
 </html>
