--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>GitHub Project</h1>
-    <h2>GitHub Update 2nd Person</h2>
+    <h1>Develop</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus consequuntur quo nemo ratione, laborum doloribus.</p>
 </body>
 </html>
