--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>GitHub Project</h1>
-    <h2>GitHub Update 2nd Person</h2>
+    <h6>GitHub Project</h6>
+    <h2>Master Branch</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus consequuntur quo nemo ratione, laborum doloribus.</p>
 </body>
 </html>
