added new button

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h6>GitHub Project</h6>
     <h2>Master Branch</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus consequuntur quo nemo ratione, laborum doloribus.</p>
+    <button>Learn More</button>
     <br>
 </body>
 </html>
